--- a/shopping_ms/customer/.env.dev
+++ b/shopping_ms/customer/.env.dev
@@ -1,8 +1,12 @@
 APP_SECRET ='jg_youtube_tutorial'
 
 # Mongo DB
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://admin123:admin123@cluster0.o7i8w.mongodb.net/dev-ms-customer'
 
 # Port
 PORT=8001
+
+# Message broker url
+MESSAGE_BROKER_URL = 'amqp://localhost'
+
 
