--- a/shopping_ms/shopping/.env.dev
+++ b/shopping_ms/shopping/.env.dev
@@ -2,7 +2,7 @@
 APP_SECRET ='jg_youtube_tutorial'
 
 # Mongo DB
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://admin123:admin123@cluster0.o7i8w.mongodb.net/dev-ms-shopping'
 
 # Port
 PORT=8003
