--- a/shopping_ms/products/.env.dev
+++ b/shopping_ms/products/.env.dev
@@ -1,7 +1,7 @@
 APP_SECRET ='jg_youtube_tutorial'
 
 # Mongo DB
-MONGODB_URI=''
+MONGODB_URI='mongodb+srv://admin123:admin123@cluster0.o7i8w.mongodb.net/dev-microservices'
 
 # Port
 PORT=8002
